--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "nodemon": "^3.1.4",
     "pg": "^8.12.0"
   }
 }
